# packages/rosaenlg-server-toolkit/src/RenderedBundle.ts
@@ -3,4 +3,5 @@ import { RenderOptions } from './RenderOptions';
 export interface RenderedBundle {
   text: string;
   renderOptions: RenderOptions;
+  outputData: any;
 }
